kadai7/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INTERVAL
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part subprog_decl_part outblock_act statement
Rule 3     outblock_act -> <empty>
Rule 4     var_decl_part -> var_decl_list SEMICOLON
Rule 5     var_decl_part -> <empty>
Rule 6     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> VAR id_list
Rule 9     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 10    subprog_decl_part -> <empty>
Rule 11    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 12    subprog_decl_list -> subprog_decl
Rule 13    subprog_decl -> proc_decl
Rule 14    subprog_decl -> func_decl
Rule 15    func_decl -> FUNCTION func_name LPAREN func_act2 RPAREN SEMICOLON inblock
Rule 16    func_decl -> FUNCTION func_name LPAREN act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock
Rule 17    func_name -> IDENT
Rule 18    func_act2 -> <empty>
Rule 19    act_func_args_set -> <empty>
Rule 20    act_func_args_done -> <empty>
Rule 21    proc_decl -> PROCEDURE proc_name LPAREN proc_act2 RPAREN SEMICOLON inblock
Rule 22    proc_decl -> PROCEDURE proc_name LPAREN act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock
Rule 23    proc_act2 -> <empty>
Rule 24    act_proc_args_done -> <empty>
Rule 25    act_proc_args_set -> <empty>
Rule 26    proc_name -> IDENT
Rule 27    inblock -> var_decl_part statement
Rule 28    statement_list -> statement_list SEMICOLON statement
Rule 29    statement_list -> statement
Rule 30    statement -> assignment_statement
Rule 31    statement -> if_statement
Rule 32    statement -> while_statement
Rule 33    statement -> for_statement
Rule 34    statement -> proc_call_statement
Rule 35    statement -> null_statement
Rule 36    statement -> block_statement
Rule 37    statement -> read_statement
Rule 38    statement -> write_statement
Rule 39    assignment_statement -> IDENT ASSIGN expression
Rule 40    act_assign_ident -> <empty>
Rule 41    if_statement -> act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
Rule 42    act_generate_labels -> <empty>
Rule 43    act_insert_br -> <empty>
Rule 44    act_insert_label1 -> <empty>
Rule 45    act_insert_label2 -> <empty>
Rule 46    act_insert_label3 -> <empty>
Rule 47    act_insert_jump1 -> <empty>
Rule 48    act_insert_jump3 -> <empty>
Rule 49    else_statement -> ELSE statement
Rule 50    else_statement -> <empty>
Rule 51    while_statement -> WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
Rule 52    act_insert_br_while -> <empty>
Rule 53    for_statement -> FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
Rule 54    act_insert_br_for -> <empty>
Rule 55    act_increment_itr -> <empty>
Rule 56    arg_list -> expression
Rule 57    arg_list -> arg_list COMMA expression
Rule 58    proc_call_name -> IDENT
Rule 59    proc_call_statement -> proc_call_name LPAREN RPAREN
Rule 60    proc_call_statement -> proc_call_name LPAREN arg_list RPAREN
Rule 61    block_statement -> BEGIN statement_list END
Rule 62    act_lookup_prev_ident -> <empty>
Rule 63    read_statement -> READ LPAREN IDENT RPAREN
Rule 64    write_statement -> WRITE LPAREN expression RPAREN
Rule 65    null_statement -> <empty>
Rule 66    condition -> expression EQ expression
Rule 67    condition -> expression NEQ expression
Rule 68    condition -> expression LT expression
Rule 69    condition -> expression LE expression
Rule 70    condition -> expression GT expression
Rule 71    condition -> expression GE expression
Rule 72    expression -> term
Rule 73    expression -> MINUS term
Rule 74    expression -> expression PLUS term
Rule 75    expression -> expression MINUS term
Rule 76    term -> factor
Rule 77    term -> term MULT factor
Rule 78    term -> term DIV factor
Rule 79    factor -> var_name
Rule 80    factor -> number
Rule 81    factor -> LPAREN expression RPAREN
Rule 82    factor -> func_call
Rule 83    func_call -> IDENT LPAREN RPAREN
Rule 84    func_call -> IDENT LPAREN arg_list RPAREN
Rule 85    var_name -> IDENT
Rule 86    number -> NUMBER
Rule 87    id_list -> IDENT
Rule 88    id_list -> id_list COMMA IDENT

Terminals, with rules where they appear

ASSIGN               : 39 53
BEGIN                : 61
COMMA                : 57 88
DIV                  : 78
DO                   : 51 53
ELSE                 : 49
END                  : 61
EQ                   : 66
FOR                  : 53
FUNCTION             : 15 16
GE                   : 71
GT                   : 70
IDENT                : 1 17 26 39 53 58 63 83 84 85 87 88
IF                   : 41
INTERVAL             : 
LBRACKET             : 
LE                   : 69
LPAREN               : 15 16 21 22 59 60 63 64 81 83 84
LT                   : 68
MINUS                : 73 75
MULT                 : 77
NEQ                  : 67
NUMBER               : 86
PERIOD               : 1
PLUS                 : 74
PROCEDURE            : 21 22
PROGRAM              : 1
RBRACKET             : 
READ                 : 63
RPAREN               : 15 16 21 22 59 60 63 64 81 83 84
SEMICOLON            : 1 4 6 9 11 15 16 21 22 28
THEN                 : 41
TO                   : 53
VAR                  : 8
WHILE                : 51
WRITE                : 64
error                : 

Nonterminals, with rules where they appear

act_assign_ident     : 53
act_func_args_done   : 16
act_func_args_set    : 16
act_generate_labels  : 41 51 53
act_increment_itr    : 53
act_insert_br        : 41
act_insert_br_for    : 53
act_insert_br_while  : 51
act_insert_jump1     : 51 51 53 53
act_insert_jump3     : 41 41
act_insert_label1    : 41 51 53
act_insert_label2    : 41 51 53
act_insert_label3    : 41 51 53
act_lookup_prev_ident : 53
act_proc_args_done   : 22
act_proc_args_set    : 22
arg_list             : 57 60 84
assignment_statement : 30
block_statement      : 36
condition            : 41 51
else_statement       : 41
expression           : 39 53 53 56 57 64 66 66 67 67 68 68 69 69 70 70 71 71 74 75 81
factor               : 76 77 78
for_statement        : 33
func_act2            : 15
func_call            : 82
func_decl            : 14
func_name            : 15 16
id_list              : 8 16 22 88
if_statement         : 31
inblock              : 15 16 21 22
null_statement       : 35
number               : 80
outblock             : 1
outblock_act         : 2
proc_act2            : 21
proc_call_name       : 59 60
proc_call_statement  : 34
proc_decl            : 13
proc_name            : 21 22
program              : 0
read_statement       : 37
statement            : 2 27 28 29 41 49 51 53
statement_list       : 28 61
subprog_decl         : 11 12
subprog_decl_list    : 9 11
subprog_decl_part    : 2
term                 : 72 73 74 75 77 78
var_decl             : 6 7
var_decl_list        : 4 6
var_decl_part        : 2 27
var_name             : 79
while_statement      : 32
write_statement      : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part subprog_decl_part outblock_act statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 5 (var_decl_part -> .)
    FUNCTION        reduce using rule 5 (var_decl_part -> .)
    IDENT           reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    PERIOD          reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . subprog_decl_part outblock_act statement
    (9) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (10) subprog_decl_part -> .
    (11) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (12) subprog_decl_list -> . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) subprog_decl -> . func_decl
    (21) proc_decl -> . PROCEDURE proc_name LPAREN proc_act2 RPAREN SEMICOLON inblock
    (22) proc_decl -> . PROCEDURE proc_name LPAREN act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock
    (15) func_decl -> . FUNCTION func_name LPAREN func_act2 RPAREN SEMICOLON inblock
    (16) func_decl -> . FUNCTION func_name LPAREN act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock

    IDENT           reduce using rule 10 (subprog_decl_part -> .)
    WHILE           reduce using rule 10 (subprog_decl_part -> .)
    FOR             reduce using rule 10 (subprog_decl_part -> .)
    BEGIN           reduce using rule 10 (subprog_decl_part -> .)
    READ            reduce using rule 10 (subprog_decl_part -> .)
    WRITE           reduce using rule 10 (subprog_decl_part -> .)
    IF              reduce using rule 10 (subprog_decl_part -> .)
    PERIOD          reduce using rule 10 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    subprog_decl_part              shift and go to state 11
    subprog_decl_list              shift and go to state 12
    subprog_decl                   shift and go to state 13
    proc_decl                      shift and go to state 14
    func_decl                      shift and go to state 15

state 7

    (4) var_decl_part -> var_decl_list . SEMICOLON
    (6) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 18


state 8

    (7) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 7 (var_decl_list -> var_decl .)


state 9

    (8) var_decl -> VAR . id_list
    (87) id_list -> . IDENT
    (88) id_list -> . id_list COMMA IDENT

    IDENT           shift and go to state 20

    id_list                        shift and go to state 19

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part subprog_decl_part . outblock_act statement
    (3) outblock_act -> .

    IDENT           reduce using rule 3 (outblock_act -> .)
    WHILE           reduce using rule 3 (outblock_act -> .)
    FOR             reduce using rule 3 (outblock_act -> .)
    BEGIN           reduce using rule 3 (outblock_act -> .)
    READ            reduce using rule 3 (outblock_act -> .)
    WRITE           reduce using rule 3 (outblock_act -> .)
    IF              reduce using rule 3 (outblock_act -> .)
    PERIOD          reduce using rule 3 (outblock_act -> .)

    outblock_act                   shift and go to state 21

state 12

    (9) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (11) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 22


state 13

    (12) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl_list -> subprog_decl .)


state 14

    (13) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 13 (subprog_decl -> proc_decl .)


state 15

    (14) subprog_decl -> func_decl .

    SEMICOLON       reduce using rule 14 (subprog_decl -> func_decl .)


state 16

    (21) proc_decl -> PROCEDURE . proc_name LPAREN proc_act2 RPAREN SEMICOLON inblock
    (22) proc_decl -> PROCEDURE . proc_name LPAREN act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock
    (26) proc_name -> . IDENT

    IDENT           shift and go to state 24

    proc_name                      shift and go to state 23

state 17

    (15) func_decl -> FUNCTION . func_name LPAREN func_act2 RPAREN SEMICOLON inblock
    (16) func_decl -> FUNCTION . func_name LPAREN act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock
    (17) func_name -> . IDENT

    IDENT           shift and go to state 26

    func_name                      shift and go to state 25

state 18

    (4) var_decl_part -> var_decl_list SEMICOLON .
    (6) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FUNCTION        reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 27

state 19

    (8) var_decl -> VAR id_list .
    (88) id_list -> id_list . COMMA IDENT

    SEMICOLON       reduce using rule 8 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 28


state 20

    (87) id_list -> IDENT .

    COMMA           reduce using rule 87 (id_list -> IDENT .)
    SEMICOLON       reduce using rule 87 (id_list -> IDENT .)
    RPAREN          reduce using rule 87 (id_list -> IDENT .)


state 21

    (2) outblock -> var_decl_part subprog_decl_part outblock_act . statement
    (30) statement -> . assignment_statement
    (31) statement -> . if_statement
    (32) statement -> . while_statement
    (33) statement -> . for_statement
    (34) statement -> . proc_call_statement
    (35) statement -> . null_statement
    (36) statement -> . block_statement
    (37) statement -> . read_statement
    (38) statement -> . write_statement
    (39) assignment_statement -> . IDENT ASSIGN expression
    (41) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (51) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (53) for_statement -> . FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (59) proc_call_statement -> . proc_call_name LPAREN RPAREN
    (60) proc_call_statement -> . proc_call_name LPAREN arg_list RPAREN
    (65) null_statement -> .
    (61) block_statement -> . BEGIN statement_list END
    (63) read_statement -> . READ LPAREN IDENT RPAREN
    (64) write_statement -> . WRITE LPAREN expression RPAREN
    (42) act_generate_labels -> .
    (58) proc_call_name -> . IDENT

    IDENT           shift and go to state 39
    WHILE           shift and go to state 41
    FOR             shift and go to state 42
    PERIOD          reduce using rule 65 (null_statement -> .)
    BEGIN           shift and go to state 44
    READ            shift and go to state 45
    WRITE           shift and go to state 46
    IF              reduce using rule 42 (act_generate_labels -> .)

    statement                      shift and go to state 29
    assignment_statement           shift and go to state 30
    if_statement                   shift and go to state 31
    while_statement                shift and go to state 32
    for_statement                  shift and go to state 33
    proc_call_statement            shift and go to state 34
    null_statement                 shift and go to state 35
    block_statement                shift and go to state 36
    read_statement                 shift and go to state 37
    write_statement                shift and go to state 38
    act_generate_labels            shift and go to state 40
    proc_call_name                 shift and go to state 43

state 22

    (9) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (11) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) subprog_decl -> . func_decl
    (21) proc_decl -> . PROCEDURE proc_name LPAREN proc_act2 RPAREN SEMICOLON inblock
    (22) proc_decl -> . PROCEDURE proc_name LPAREN act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock
    (15) func_decl -> . FUNCTION func_name LPAREN func_act2 RPAREN SEMICOLON inblock
    (16) func_decl -> . FUNCTION func_name LPAREN act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock

    IDENT           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    subprog_decl                   shift and go to state 47
    proc_decl                      shift and go to state 14
    func_decl                      shift and go to state 15

state 23

    (21) proc_decl -> PROCEDURE proc_name . LPAREN proc_act2 RPAREN SEMICOLON inblock
    (22) proc_decl -> PROCEDURE proc_name . LPAREN act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock

    LPAREN          shift and go to state 48


state 24

    (26) proc_name -> IDENT .

    LPAREN          reduce using rule 26 (proc_name -> IDENT .)


state 25

    (15) func_decl -> FUNCTION func_name . LPAREN func_act2 RPAREN SEMICOLON inblock
    (16) func_decl -> FUNCTION func_name . LPAREN act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock

    LPAREN          shift and go to state 49


state 26

    (17) func_name -> IDENT .

    LPAREN          reduce using rule 17 (func_name -> IDENT .)


state 27

    (6) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 28

    (88) id_list -> id_list COMMA . IDENT

    IDENT           shift and go to state 50


state 29

    (2) outblock -> var_decl_part subprog_decl_part outblock_act statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part subprog_decl_part outblock_act statement .)


state 30

    (30) statement -> assignment_statement .

    PERIOD          reduce using rule 30 (statement -> assignment_statement .)
    END             reduce using rule 30 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 30 (statement -> assignment_statement .)
    ELSE            reduce using rule 30 (statement -> assignment_statement .)


state 31

    (31) statement -> if_statement .

    PERIOD          reduce using rule 31 (statement -> if_statement .)
    END             reduce using rule 31 (statement -> if_statement .)
    SEMICOLON       reduce using rule 31 (statement -> if_statement .)
    ELSE            reduce using rule 31 (statement -> if_statement .)


state 32

    (32) statement -> while_statement .

    PERIOD          reduce using rule 32 (statement -> while_statement .)
    END             reduce using rule 32 (statement -> while_statement .)
    SEMICOLON       reduce using rule 32 (statement -> while_statement .)
    ELSE            reduce using rule 32 (statement -> while_statement .)


state 33

    (33) statement -> for_statement .

    PERIOD          reduce using rule 33 (statement -> for_statement .)
    END             reduce using rule 33 (statement -> for_statement .)
    SEMICOLON       reduce using rule 33 (statement -> for_statement .)
    ELSE            reduce using rule 33 (statement -> for_statement .)


state 34

    (34) statement -> proc_call_statement .

    PERIOD          reduce using rule 34 (statement -> proc_call_statement .)
    END             reduce using rule 34 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 34 (statement -> proc_call_statement .)
    ELSE            reduce using rule 34 (statement -> proc_call_statement .)


state 35

    (35) statement -> null_statement .

    PERIOD          reduce using rule 35 (statement -> null_statement .)
    END             reduce using rule 35 (statement -> null_statement .)
    SEMICOLON       reduce using rule 35 (statement -> null_statement .)
    ELSE            reduce using rule 35 (statement -> null_statement .)


state 36

    (36) statement -> block_statement .

    PERIOD          reduce using rule 36 (statement -> block_statement .)
    END             reduce using rule 36 (statement -> block_statement .)
    SEMICOLON       reduce using rule 36 (statement -> block_statement .)
    ELSE            reduce using rule 36 (statement -> block_statement .)


state 37

    (37) statement -> read_statement .

    PERIOD          reduce using rule 37 (statement -> read_statement .)
    END             reduce using rule 37 (statement -> read_statement .)
    SEMICOLON       reduce using rule 37 (statement -> read_statement .)
    ELSE            reduce using rule 37 (statement -> read_statement .)


state 38

    (38) statement -> write_statement .

    PERIOD          reduce using rule 38 (statement -> write_statement .)
    END             reduce using rule 38 (statement -> write_statement .)
    SEMICOLON       reduce using rule 38 (statement -> write_statement .)
    ELSE            reduce using rule 38 (statement -> write_statement .)


state 39

    (39) assignment_statement -> IDENT . ASSIGN expression
    (58) proc_call_name -> IDENT .

    ASSIGN          shift and go to state 51
    LPAREN          reduce using rule 58 (proc_call_name -> IDENT .)


state 40

    (41) if_statement -> act_generate_labels . IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3

    IF              shift and go to state 52


state 41

    (51) while_statement -> WHILE . act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (42) act_generate_labels -> .

    MINUS           reduce using rule 42 (act_generate_labels -> .)
    LPAREN          reduce using rule 42 (act_generate_labels -> .)
    IDENT           reduce using rule 42 (act_generate_labels -> .)
    NUMBER          reduce using rule 42 (act_generate_labels -> .)

    act_generate_labels            shift and go to state 53

state 42

    (53) for_statement -> FOR . act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (42) act_generate_labels -> .

    IDENT           reduce using rule 42 (act_generate_labels -> .)

    act_generate_labels            shift and go to state 54

state 43

    (59) proc_call_statement -> proc_call_name . LPAREN RPAREN
    (60) proc_call_statement -> proc_call_name . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 55


state 44

    (61) block_statement -> BEGIN . statement_list END
    (28) statement_list -> . statement_list SEMICOLON statement
    (29) statement_list -> . statement
    (30) statement -> . assignment_statement
    (31) statement -> . if_statement
    (32) statement -> . while_statement
    (33) statement -> . for_statement
    (34) statement -> . proc_call_statement
    (35) statement -> . null_statement
    (36) statement -> . block_statement
    (37) statement -> . read_statement
    (38) statement -> . write_statement
    (39) assignment_statement -> . IDENT ASSIGN expression
    (41) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (51) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (53) for_statement -> . FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (59) proc_call_statement -> . proc_call_name LPAREN RPAREN
    (60) proc_call_statement -> . proc_call_name LPAREN arg_list RPAREN
    (65) null_statement -> .
    (61) block_statement -> . BEGIN statement_list END
    (63) read_statement -> . READ LPAREN IDENT RPAREN
    (64) write_statement -> . WRITE LPAREN expression RPAREN
    (42) act_generate_labels -> .
    (58) proc_call_name -> . IDENT

    IDENT           shift and go to state 39
    WHILE           shift and go to state 41
    FOR             shift and go to state 42
    END             reduce using rule 65 (null_statement -> .)
    SEMICOLON       reduce using rule 65 (null_statement -> .)
    BEGIN           shift and go to state 44
    READ            shift and go to state 45
    WRITE           shift and go to state 46
    IF              reduce using rule 42 (act_generate_labels -> .)

    statement_list                 shift and go to state 56
    statement                      shift and go to state 57
    assignment_statement           shift and go to state 30
    if_statement                   shift and go to state 31
    while_statement                shift and go to state 32
    for_statement                  shift and go to state 33
    proc_call_statement            shift and go to state 34
    null_statement                 shift and go to state 35
    block_statement                shift and go to state 36
    read_statement                 shift and go to state 37
    write_statement                shift and go to state 38
    act_generate_labels            shift and go to state 40
    proc_call_name                 shift and go to state 43

state 45

    (63) read_statement -> READ . LPAREN IDENT RPAREN

    LPAREN          shift and go to state 58


state 46

    (64) write_statement -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 59


state 47

    (11) subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .

    SEMICOLON       reduce using rule 11 (subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .)


state 48

    (21) proc_decl -> PROCEDURE proc_name LPAREN . proc_act2 RPAREN SEMICOLON inblock
    (22) proc_decl -> PROCEDURE proc_name LPAREN . act_proc_args_set id_list act_proc_args_done RPAREN SEMICOLON inblock
    (23) proc_act2 -> .
    (25) act_proc_args_set -> .

    RPAREN          reduce using rule 23 (proc_act2 -> .)
    IDENT           reduce using rule 25 (act_proc_args_set -> .)

    proc_act2                      shift and go to state 60
    act_proc_args_set              shift and go to state 61

state 49

    (15) func_decl -> FUNCTION func_name LPAREN . func_act2 RPAREN SEMICOLON inblock
    (16) func_decl -> FUNCTION func_name LPAREN . act_func_args_set id_list act_func_args_done RPAREN SEMICOLON inblock
    (18) func_act2 -> .
    (19) act_func_args_set -> .

    RPAREN          reduce using rule 18 (func_act2 -> .)
    IDENT           reduce using rule 19 (act_func_args_set -> .)

    func_act2                      shift and go to state 62
    act_func_args_set              shift and go to state 63

state 50

    (88) id_list -> id_list COMMA IDENT .

    COMMA           reduce using rule 88 (id_list -> id_list COMMA IDENT .)
    SEMICOLON       reduce using rule 88 (id_list -> id_list COMMA IDENT .)
    RPAREN          reduce using rule 88 (id_list -> id_list COMMA IDENT .)


state 51

    (39) assignment_statement -> IDENT ASSIGN . expression
    (72) expression -> . term
    (73) expression -> . MINUS term
    (74) expression -> . expression PLUS term
    (75) expression -> . expression MINUS term
    (76) term -> . factor
    (77) term -> . term MULT factor
    (78) term -> . term DIV factor
    (79) factor -> . var_name
    (80) factor -> . number
    (81) factor -> . LPAREN expression RPAREN
    (82) factor -> . func_call
    (85) var_name -> . IDENT
    (86) number -> . NUMBER
    (83) func_call -> . IDENT LPAREN RPAREN
    (84) func_call -> . IDENT LPAREN arg_list RPAREN

    MINUS           shift and go to state 67
    LPAREN          shift and go to state 71
    IDENT           shift and go to state 64
    NUMBER          shift and go to state 73

    expression                     shift and go to state 65
    term                           shift and go to state 66
    factor                         shift and go to state 68
    var_name                       shift and go to state 69
    number                         shift and go to state 70
    func_call                      shift and go to state 72

state 52

    (41) if_statement -> act_generate_labels IF . condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (66) condition -> . expression EQ expression
    (67) condition -> . expression NEQ expression
    (68) condition -> . expression LT expression
    (69) condition -> . expression LE expression
    (70) condition -> . expression GT expression
    (71) condition -> . expression GE expression
    (72) expression -> . term
    (73) expression -> . MINUS term
    (74) expression -> . expression PLUS term
    (75) expression -> . expression MINUS term
    (76) term -> . factor
    (77) term -> . term MULT factor
    (78) term -> . term DIV factor
    (79) factor -> . var_name
    (80) factor -> . number
    (81) factor -> . LPAREN expression RPAREN
    (82) factor -> . func_call
    (85) var_name -> . IDENT
    (86) number -> . NUMBER
    (83) func_call -> . IDENT LPAREN RPAREN
    (84) func_call -> . IDENT LPAREN arg_list RPAREN

    MINUS           shift and go to state 67
    LPAREN          shift and go to state 71
    IDENT           shift and go to state 64
    NUMBER          shift and go to state 73

    condition                      shift and go to state 74
    expression                     shift and go to state 75
    term                           shift and go to state 66
    factor                         shift and go to state 68
    var_name                       shift and go to state 69
    number                         shift and go to state 70
    func_call                      shift and go to state 72

state 53

    (51) while_statement -> WHILE act_generate_labels . act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (47) act_insert_jump1 -> .

    MINUS           reduce using rule 47 (act_insert_jump1 -> .)
    LPAREN          reduce using rule 47 (act_insert_jump1 -> .)
    IDENT           reduce using rule 47 (act_insert_jump1 -> .)
    NUMBER          reduce using rule 47 (act_insert_jump1 -> .)

    act_insert_jump1               shift and go to state 76

state 54

    (53) for_statement -> FOR act_generate_labels . IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3

    IDENT           shift and go to state 77


state 55

    (59) proc_call_statement -> proc_call_name LPAREN . RPAREN
    (60) proc_call_statement -> proc_call_name LPAREN . arg_list RPAREN
    (56) arg_list -> . expression
    (57) arg_list -> . arg_list COMMA expression
    (72) expression -> . term
    (73) expression -> . MINUS term
    (74) expression -> . expression PLUS term
    (75) expression -> . expression MINUS term
    (76) term -> . factor
    (77) term -> . term MULT factor
    (78) term -> . term DIV factor
    (79) factor -> . var_name
    (80) factor -> . number
    (81) factor -> . LPAREN expression RPAREN
    (82) factor -> . func_call
    (85) var_name -> . IDENT
    (86) number -> . NUMBER
    (83) func_call -> . IDENT LPAREN RPAREN
    (84) func_call -> . IDENT LPAREN arg_list RPAREN

    RPAREN          shift and go to state 78
    MINUS           shift and go to state 67
    LPAREN          shift and go to state 71
    IDENT           shift and go to state 64
    NUMBER          shift and go to state 73

    arg_list                       shift and go to state 79
    expression                     shift and go to state 80
    term                           shift and go to state 66
    factor                         shift and go to state 68
    var_name                       shift and go to state 69
    number                         shift and go to state 70
    func_call                      shift and go to state 72

state 56

    (61) block_statement -> BEGIN statement_list . END
    (28) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 81
    SEMICOLON       shift and go to state 82


state 57

    (29) statement_list -> statement .

    END             reduce using rule 29 (statement_list -> statement .)
    SEMICOLON       reduce using rule 29 (statement_list -> statement .)


state 58
